[tool.poetry]
name = "gscookies"
version = "0.1.0"
description = ""
authors = ["Jennifer Klemisch"]
readme = "README.md"
package-mode = false

[dependencies]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "elasticsearch (>=8.17.0,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit-permalink (>=0.5.2,<0.6.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "streamlit-authenticator (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
