[project]
name = "gscookies"
version = "0.2.0"
description = ""
authors = [
    {name = "Jennifer Klemisch", email = "jenniferklemisch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
package-mode=false

dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "streamlit>=1.42,<2.0",
    "streamlit-extras>=0.5,<0.6",
    "extra-streamlit-components>=0.1.71,<0.2",
    "bcrypt>=4.2,<5.0",
    "psycopg2-binary>=2.9",

    # keep temporarily
    "elasticsearch>=8.17,<9.0",

    # NEW (used later, harmless now)
    "sqlalchemy>=2.0.30,<3.0",
    "reportlab (>=4.4.7,<5.0.0)",
]

[tool.poetry]
    package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
